<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.GameActivity">
    <TextView
        android:id="@+id/game_activity_textview_question"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="2"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@color/light_blue"
        android:text="@string/question_title"
        />

    <Button
        android:id="@+id/game_activity_button_answers1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/answers1"
        />
    <Button
        android:id="@+id/game_activity_button_answers2"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/answers2"
        />
    <Button
        android:id="@+id/game_activity_button_answers3"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/answers3"
        />
    <Button
        android:id="@+id/game_activity_button_answers4"

        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:textSize="20sp"
        android:text="@string/answers4"
        />

</LinearLayout>